ingress-a.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-a
  namespace: nginx
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: ing-shared-alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-certificate-no: "18031"
    alb.ingress.kubernetes.io/subnet-id: "34873"
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/group.name: ing-shared-alb

    alb.ingress.kubernetes.io/actions.spring-io-service: >
      {"type":"targetGroup","targetGroup":{"targetGroups":[{"serviceName":"spring-io/spring-io-service","servicePort":80,"weight":100}]}}

    alb.ingress.kubernetes.io/actions.spring-a: >
      {"type":"targetGroup","targetGroup":{"targetGroups":[{"serviceName":"spring-a/spring-a-service","servicePort":80,"weight":100}]}}

    alb.ingress.kubernetes.io/actions.spring-b: >
      {"type":"targetGroup","targetGroup":{"targetGroups":[{"serviceName":"spring-b/spring-b-service","servicePort":80,"weight":100}]}}
spec:
  ingressClassName: alb
  tls:
    - hosts:
        - y-spring-io.aidtclass.com
        - y-spring-a.aidtclass.com
        - y-spring-b.aidtclass.com
  rules:
    - host: y-spring-io.aidtclass.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-io-service
                port:
                  name: use-annotation

    - host: y-spring-a.aidtclass.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-a
                port:
                  name: use-annotation

    - host: y-spring-b.aidtclass.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-b
                port:
                  name: use-annotation
