ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shared-ingress
  namespace: nginx
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: ing-shared-alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-certificate-no: "18031"
    alb.ingress.kubernetes.io/subnet-id: "34873"
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    # alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/backend-protocol: HTTPS

    # alb.ingress.kubernetes.io/actions.otel-grafana: >
    #   {"type":"targetGroup","targetGroup":{"targetGroups":[{"serviceName":"spring-io/my-otel-demo-grafana","servicePort":80,"weight":100}]}}

    # alb.ingress.kubernetes.io/actions.otel-jaeger: >
    #   {"type":"targetGroup","targetGroup":{"targetGroups":[{"serviceName":"spring-io/my-otel-demo-jaeger-query","servicePort":16686,"weight":100}]}}

    # alb.ingress.kubernetes.io/actions.otel-prometheus: >
    #   {"type":"targetGroup","targetGroup":{"targetGroups":[{"serviceName":"spring-io/my-otel-demo-prometheus-server","servicePort":9090,"weight":100}]}}

    # alb.ingress.kubernetes.io/actions.otel-opensearch: >
    #   {"type":"targetGroup","targetGroup":{"targetGroups":[{"serviceName":"spring-io/otel-demo-opensearch","servicePort":9200,"weight":100}]}}

    # alb.ingress.kubernetes.io/actions.nginx-service: >
    #   {"type":"targetGroup","targetGroup":{"targetGroups":[{"serviceName":"nginx/nginx-service","servicePort":80,"weight":100}]}}

    # alb.ingress.kubernetes.io/actions.prometheus-server: >
    #   {"type":"targetGroup","targetGroup":{"targetGroups":[{"serviceName":"logging/loki-prometheus-server","servicePort":80,"weight":100}]}}

    # alb.ingress.kubernetes.io/actions.spring-io-service: >
    #   {"type":"targetGroup","targetGroup":{"targetGroups":[{"serviceName":"spring-io/spring-io-service","servicePort":80,"weight":100}]}}

    # alb.ingress.kubernetes.io/actions.spring-a: >
    #   {"type":"targetGroup","targetGroup":{"targetGroups":[{"serviceName":"spring-a/spring-a-service","servicePort":80,"weight":100}]}}

    # alb.ingress.kubernetes.io/actions.spring-b: >
    #   {"type":"targetGroup","targetGroup":{"targetGroups":[{"serviceName":"spring-b/spring-b-service","servicePort":80,"weight":100}]}}

    # alb.ingress.kubernetes.io/actions.tempo: >
    #   {"type":"targetGroup","targetGroup":{"targetGroups":[{"serviceName":"observability/tempo","servicePort":3100,"weight":100}]}}

    alb.ingress.kubernetes.io/actions.grafana: >
      {"type":"targetGroup","targetGroup":{"targetGroups":[{"serviceName":"monitoring/grafana","servicePort":80,"weight":100}]}}

    alb.ingress.kubernetes.io/actions.argocd: >
      {"type":"targetGroup","targetGroup":{"targetGroups":[{"serviceName":"argocd/argocd-server","servicePort":80,"weight":100}]}}

    # alb.ingress.kubernetes.io/actions.alloy: >
    #   {"type":"targetGroup","targetGroup":{"targetGroups":[{"serviceName":"alloy/alloy","servicePort":12345,"weight":100}]}}

spec:
  ingressClassName: alb
  tls:
    - hosts:
        # - y-otel-grafana.aidtclass.com
        # - y-otel-jaeger.aidtclass.com
        # - y-otel-prometheus.aidtclass.com
        # - y-otel-opensearch.aidtclass.com
        # - y-nginx.aidtclass.com
        # - y-spring-io.aidtclass.com
        # - y-spring-a.aidtclass.com
        # - y-spring-b.aidtclass.com
        - y-grafana.aidtclass.com
        - y-argocd.aidtclass.com
        # - y-prometheus.aidtclass.com
        # - y-tempo.aidtclass.com
        # - y-alloy.aidtclass.com
  rules:
    # - host: y-nginx.aidtclass.com
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: nginx-service
    #             port:
    #               name: use-annotation

    # - host: y-alloy.aidtclass.com
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: alloy
    #             port:
    #               name: use-annotation

    # - host: y-prometheus.aidtclass.com
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: prometheus-server
    #             port:
    #               name: use-annotation

    # - host: y-spring-io.aidtclass.com
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: spring-io-service
    #             port:
    #               name: use-annotation

    # - host: y-spring-a.aidtclass.com
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: spring-a
    #             port:
    #               name: use-annotation

    # - host: y-spring-b.aidtclass.com
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: spring-b
    #             port:
    #               name: use-annotation

    # - host: y-tempo.aidtclass.com
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: tempo
    #             port:
    #               name: use-annotation

    - host: y-grafana.aidtclass.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  name: use-annotation

    - host: y-argocd.aidtclass.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd
                port:
                  name: use-annotation                  

    # - host: y-otel-grafana.aidtclass.com
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: otel-grafana
    #             port:
    #               name: use-annotation

    # - host: y-otel-jaeger.aidtclass.com
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: otel-jaeger
    #             port:
    #               name: use-annotation

    # - host: y-otel-prometheus.aidtclass.com
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: otel-prometheus
    #             port:
    #               name: use-annotation

    # - host: y-otel-opensearch.aidtclass.com
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: otel-opensearch
    #             port:
    #               name: use-annotation
